regression/fail/type.sml
type t = u

type 'a t = unit
type u = t

datatype 'a t = T
type u = t
